Fixed text being momentarily visible on load

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a { color: black; text-decoration: none; /* changes links to black */ }
 body {
 	text-align:center;
 	font-family:	sans-serif;
-	font-size:13px;
+	font-size:0px;
 	color: #222222;
 	background-image: url("chrome://global/skin/media/imagedoc-darknoise.png");
 }
